...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">


            <TextView
                android:id="@+id/neighbour_detail_tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/neighbour_detail_tv_address"
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/neighbour_detail_fab_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorWhite"
...
